--- a/client/pages/location/location.wxml
+++ b/client/pages/location/location.wxml
@@ -1,6 +1,6 @@
-<view><text>经度： {{ location.longitude }}</text></view>
+<view><text>经度： {{ location.pointx }}</text></view>
 
-<view><text>维度： {{ location.latitude }}</text></view>
+<view><text>维度： {{ location.pointy }}</text></view>
 
 <view><text>地址：  {{ location.address }}</text></view>
 
@@ -8,9 +8,9 @@
   <scroll-view scroll-y="true">
     <view wx:for="{{storeList}}" wx:for-index="idx" wx:for-item="store">
       <navigator url="../store/store?id={{store.order}}" hover-class="navigator-hover">
-        <text class="store-text">{{store.order}}</text>
-        <text class="store-text">{{store.isSubject}}</text>
-        <text class="store-text">{{store.name}}</text>
+        <text class="store-text">{{store.cid}}</text>
+        <text class="store-text">{{store.destFlag}}</text>
+        <text class="store-text">{{store.cname}}</text>
       </navigator>
     </view>
   </scroll-view>
