--- a/client/pages/store/store.wxml
+++ b/client/pages/store/store.wxml
@@ -1,32 +1,32 @@
 <view>
   <view>
     <text>药店名称:</text>
-    <input type='text'>{{name}}</input>
+    <input type='text' value='{{cname}}'></input>
   </view>
   <view>
     <text>药店编码:</text>
-    <input type='text'>{{code}}</input>
+    <input type='text' value='{{dsCode}}'></input>
   </view>
   <view>
     <text>是否录随访人员:</text>
-     <switch checked bindchange="switchflowChange"/>
+     <switch bindchange="switchflowChange"/>
   </view>
 
   <block wx:if="{{hideFollwerInput}}">
     <view>
       <text>随访人员:</text>
-      <input type='text'>{{followName}}</input>
+      <input type='text' value='{{followName}}'></input>
     </view>
   </block>
   
 
   <view>
     <text>OTC代表:</text>
-    <text>陈斯泉</text>
+    <text>{{user.fname}}</text>
   </view>
 
 </view>
 
 <view>
-<button bindtap='enter'>进入店铺</button>
+<button bindtap='enter' class="weui-btn" type="primary">进入店铺</button>
 </view>
