--- a/client/app.wxss
+++ b/client/app.wxss
@@ -1,4 +1,5 @@
 /**app.wxss**/
+@import 'weui.wxss';
 .container {
   display: flex;
   flex-direction: column;
@@ -11,6 +12,7 @@
 .input-text {
   border: darkgray 1px solid;
   padding: 2px;
+  line-height: 50px;
 }
 
 .section {
@@ -20,3 +22,6 @@
 .picker {
   border: darkgray 1px solid;
 }
+
+
+
