--- a/client/pages/location/location.wxml
+++ b/client/pages/location/location.wxml
@@ -4,16 +4,13 @@
 
 <view><text>地址：  {{ location.address }}</text></view>
 
-<view>
-  <scroll-view scroll-y="true">
-    <view wx:for="{{storeList}}" wx:for-index="idx" wx:for-item="store">
-      <navigator url="../store/store?id={{store.order}}" hover-class="navigator-hover">
-        <text class="store-text">{{store.cid}}</text>
-        <text class="store-text">{{store.destFlag}}</text>
-        <text class="store-text">{{store.cname}}</text>
-      </navigator>
-    </view>
-  </scroll-view>
+
+
+   <view class="weui-cells weui-cells_after-title" wx:for="{{storeList}}" wx:for-index="idx" wx:for-item="store">
+            <navigator url="../store/store?id={{store.cid}}" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+                <view class="weui-cell__bd">{{idx + 1}}-{{store.cname}}</view>
+                <view class="weui-cell__ft weui-cell__ft_in-access">{{store.destFlag}} </view>
+            </navigator>
 </view>
 
 
