--- a/client/pages/location/location.wxss
+++ b/client/pages/location/location.wxss
@@ -2,3 +2,12 @@
 .store-text {
   margin: 20px;
 }
+
+.button-sp-area{
+    margin: 0 auto;
+    padding-top: 15px;
+    width: 60%;
+}
+.mini-btn{
+    margin-right: 5px;
+}
