--- a/client/pages/addStore/storeForm.wxml
+++ b/client/pages/addStore/storeForm.wxml
@@ -17,7 +17,8 @@
       </view>
       <view class="weui-cell__bd">
         <picker value="{{levelIndex}}" range="{{levelItems}}" bindchange="onlevelChanged">
-          <view class="weui-input">{{levelItems[levelIndex]}}</view>
+          <!-- <view class="weui-input">{{levelItems[levelIndex]}}</view> -->
+           <input class="weui-input" name='levl' value="{{levelItems[levelIndex]}}" />
         </picker>
       </view>
     </view>
@@ -27,7 +28,8 @@
       </view>
       <view class="weui-cell__bd">
         <picker value="{{destFlagIndex}}" range="{{destFlagItems}}" bindchange="onDestFlagChanged">
-          <view class="weui-input">{{destFlagItems[destFlagIndex]}}</view>
+          <!-- <view class="weui-input">{{destFlagItems[destFlagIndex]}}</view> -->
+           <input class="weui-input" name='destFlag' value="{{destFlagItems[destFlagIndex]}}" />
         </picker>
       </view>
     </view>
