--- a/client/pages/displayInfo/displayInfo.wxml
+++ b/client/pages/displayInfo/displayInfo.wxml
@@ -46,7 +46,8 @@
       </view>
       <view class="weui-cell__bd">
         <picker value="{{dispSurfIndex}}" range="{{dispSurfItems}}" bindchange="onDispSurfChanged">
-          <view class="weui-input">{{dispSurfItems[dispSurfIndex]}}</view>
+          <!-- <view class="weui-input">{{dispSurfItems[dispSurfIndex]}}</view> -->
+          <input class="weui-input" name='dispSurf' value="{{dispSurfItems[dispSurfIndex]}}"  />
         </picker>
       </view>
     </view>
@@ -56,7 +57,8 @@
       </view>
       <view class="weui-cell__bd">
         <picker value="{{dispPosiIndex}}" range='{{dispPosiItems}}' bindchange="onDispPosiChanged">
-          <view class="weui-input">{{dispPosiItems[dispPosiIndex]}}</view>
+          <!-- <view class="weui-input">{{dispPosiItems[dispPosiIndex]}}</view> -->
+           <input class="weui-input" name='dispPosi' value="{{dispPosiItems[dispPosiIndex]}}"  />
         </picker>
       </view>
     </view>
