--- a/client/pages/inStore/inStore.wxml
+++ b/client/pages/inStore/inStore.wxml
@@ -9,7 +9,7 @@
   </view>
   <view>
     <text>是否录随访人员:</text>
-     <switch bindchange="switchflowChange"/>
+    <switch bindchange="switchflowChange" />
   </view>
 
   <block wx:if="{{hideFollwerInput}}">
@@ -18,44 +18,53 @@
       <input type='text' class='weui-input' value='{{followName}}'></input>
     </view>
   </block>
-  
+
 
   <view>
     <text>OTC代表:</text>
     <text>{{user.fname}}</text>
   </view>
 
-   <view class="page">
+  <view class="page">
     <view class="page__bd">
-        <view class="weui-cells">
-            <view class="weui-cell">
-                <view class="weui-cell__bd">
-                    <view class="weui-uploader">
-                        <view class="weui-uploader__hd">
-                            <view class="weui-uploader__title">图片上传</view>
-                            <view class="weui-uploader__info">{{files.length}}/1</view>
-                        </view>
-                        <view class="weui-uploader__bd">
-                            <view class="weui-uploader__files" id="uploaderFiles">
-                                <block wx:for="{{files}}" wx:key="*this">
-                                    <view class="weui-uploader__file" bindtap="previewImage" id="{{item}}">
-                                        <image class="weui-uploader__img" src="{{item}}" mode="aspectFill" />
-                                    </view>
-                                </block>                     
-                            </view>
-                            <view class="weui-uploader__input-box">
-                                <view class="weui-uploader__input" bindtap="chooseImage"></view>
-                            </view>
-                        </view>
+      <view class="weui-cells">
+        <view class="weui-cell">
+          <view class="weui-cell__bd">
+            <view class="weui-uploader">
+              <view class="weui-uploader__hd">
+                <view class="weui-uploader__title">图片上传</view>
+                <view class="weui-uploader__info">{{files.length}}/1</view>
+              </view>
+              <view class="weui-uploader__bd">
+                <view class="weui-uploader__files" id="uploaderFiles">
+                  <block wx:for="{{files}}" wx:key="*this">
+                    <view class="weui-uploader__file" bindtap="previewImage" id="{{item}}">
+                      <image class="weui-uploader__img" src="{{item}}" mode="aspectFill" />
                     </view>
+                  </block>
                 </view>
+                <view class="weui-uploader__input-box">
+                  <view class="weui-uploader__input" bindtap="chooseImage"></view>
+                </view>
+              </view>
             </view>
+          </view>
         </view>
+      </view>
     </view>
-</view>
+  </view>
 
 </view>
 
 <view>
-<button bindtap='enter' class="weui-btn" type="primary">进入店铺</button>
+  <button bindtap='enter' class="weui-btn" type="primary">进入店铺</button>
+  <button class='weui-btn' type='default' bindtap='todayInstoreInfo'>当天巡店记录</button>
+</view>
+
+
+<view class="weui-cells weui-cells_after-title">
+  <view class="weui-cell"  wx:for="{{instoreList}}" wx:for-index="idx" wx:for-item="instore">
+    <view class="weui-cell__bd">{{instore.dsName}}</view>
+    <view class="weui-cell__ft">{{instore.inDate}}</view>
+  </view>
 </view>
