1、修复了扫描药品条码，未带出药品编码和名称的bug 2、增加记住账号和密码功能，避免安卓机器退出后需再次手动录入账号密码 3、去掉了药品列表“否”列 4、增加了当日寻访记录默认按照时间倒序排列 5、入店不强制拍照

--- a/client/pages/location/location.wxml
+++ b/client/pages/location/location.wxml
@@ -12,7 +12,7 @@
    <view class="weui-cells weui-cells_after-title" wx:for="{{storeList}}" wx:for-index="idx" wx:for-item="store">
             <navigator url="../inStore/inStore?id={{store.cid}}" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
                 <view class="weui-cell__bd">{{idx + 1}}-{{store.cname}}</view>
-                <view class="weui-cell__ft weui-cell__ft_in-access">{{store.destFlag}} </view>
+                <view class="weui-cell__ft weui-cell__ft_in-access"></view>
             </navigator>
 </view>
 
