--- a/client/app.wxss
+++ b/client/app.wxss
@@ -23,5 +23,16 @@
   border: darkgray 1px solid;
 }
 
+.mask{
+  width:100%;
+  height:100%;
+  position:fixed;
+  background-color:#999;
+  z-index:9999;
+  top:0;
+  left:0;
+  opacity:0.5;
+}
+
 
 
