--- a/client/pages/inStore/inStore.wxml
+++ b/client/pages/inStore/inStore.wxml
@@ -1,3 +1,4 @@
+<view class='mask' hidden='{{maskFlag}}'></view>
 <view>
   <view>
     <text>药店名称:</text>
@@ -15,7 +16,7 @@
   <block wx:if="{{hideFollwerInput}}">
     <view>
       <text>随访人员:</text>
-      <input type='text' class='weui-input' value='{{followName}}'></input>
+      <input placeholder='请输入随访人员' type='text' class='weui-input' value='{{followName}}'></input>
     </view>
   </block>
 
@@ -63,7 +64,7 @@
 
 
 <view class="weui-cells weui-cells_after-title">
-  <view class="weui-cell"  wx:for="{{instoreList}}" wx:for-index="idx" wx:for-item="instore">
+  <view class="weui-cell"  wx:for="{{instoreList}}" wx:key="cid" wx:for-index="idx" wx:for-item="instore">
     <view class="weui-cell__bd">{{instore.dsName}}</view>
     <view class="weui-cell__ft">{{instore.inDate}}</view>
   </view>
